@@ -12,6 +12,7 @@ Version 1.5 (X/X/20X)
   * The contact list search now treats whitespace-separated words as keywords. (Paul Vet) (#14354)
   * Improved the logic for the display of tooltips. (Matthew Plough) (#12774)
   * "User Picture Change" menu now looks native on Leopard and newer systems (Adrian Godoroja) (#11964)
+  * "User Picture" - image well, supports drag and drop
   * Fixed positioning of selected icon in Recent Icons not being reapplied when icon is reselected. (#9908)
 
  Dock icon
@@ -50,6 +51,7 @@ Version 1.5 (X/X/20X)
 
  User Picture (Buddy Icons)
  * Ability to resize animated gifs that are too large (#9885)
+ * Image wells for changing User Picture support drag & drop and will also open Image Picker to edit the image if it's too large or not of square shape (20% off shape)
 
  AIM
   * Added a preference for AIM: "allow multiple sign in locations" defaulting to true. (Josh Perry) (#5790)
